Fixed layout issue

--- a/_sass/photography.scss
+++ b/_sass/photography.scss
@@ -1,7 +1,7 @@
 .photography {
   &-grid {
     margin: auto;
-    width: 3400px !important;
+    width: 3800px !important;
     margin-bottom: 8px !important;
     padding: 2px;
 
